# kambuzuma

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  SETUP.md  clippy.toml  deny.toml  docker-compose.yml  justfile  kambuzuma.env.example  pyproject.toml  requirements.txt  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
config/: benguela.toml
docs/: README-original.md  README-updated.md  benguela_updates.md  communication.md  harare.md  hugure.md  incoming.md  kambuzuma-whitepaper.aux  kambuzuma-whitepaper.fdb_latexmk  kambuzuma-whitepaper.fls  kambuzuma-whitepaper.md  kambuzuma-whitepaper.out  kambuzuma-whitepaper.tex  kambuzuma-whitepaper.toc  kambuzuma.md  molecular-space.md  monkey_tail_kambuzuma_integration.md  new-plan.md  outgoing.md  structure.md
docs/fundamentals/: biological-maxwell-demons.md  complete_foundation.tex  consiousness.md  context.md  credibility.md  easter-islands.md  existance.md  fire.md  foundation.fdb_latexmk  foundation.fls  foundation.md  four-sided-triangle.md  heihachi.md  helicopter.md  human-oscillatory-dynamics.aux  human-oscillatory-dynamics.fdb_latexmk  human-oscillatory-dynamics.fls  human-oscillatory-dynamics.md  human-oscillatory-dynamics.out  language.md  proximity.md
docs/publications/: jungfernstieg.tex  kambuzuma-neural-stacks.aux  kambuzuma-neural-stacks.fdb_latexmk  kambuzuma-neural-stacks.fls  kambuzuma-neural-stacks.tex
docs/theory/: foundational-theorem.tex
src/: anti_algorithm_engine.rs  atmospheric_molecular_network.rs  bmd_frame_selection.rs  bmd_information_catalysts.rs  config.rs  electromagnetic_signal_universe.rs  entropy_solver_service.rs  errors.rs  global_s_viability.rs  infinite_zero_duality.rs  jungfernstieg.rs  lib.rs  main.rs  memorial_harmonic_integration.rs  processor_clock_duality.rs  ridiculous_solution_engine.rs  tri_dimensional_s.rs  tri_dimensional_s_coordinator.rs  turbulance_dsl.rs  types.rs  universal_recursive_enhancement.rs  virtual_blood.rs
src/agency_assertion/: mod.rs
src/autonomous/: mod.rs
src/biological_hardware/: mod.rs
src/biological_validation/: mod.rs
src/bioreactor/: README.md  cell_culture_kinetics.rs  mod.rs  oxygen_transfer.rs
src/consciousness_emergence/: mod.rs
src/examples/: comprehensive_s_entropy_integration.rs  mod.rs  monkey_tail_demo.rs  revolutionary_triple_redundancy_demo.rs  s_entropy_demo.rs
src/fire_circle_evolution/: mod.rs
src/interfaces/: mod.rs
src/interfaces/cli/: mod.rs
src/interfaces/gui/: mod.rs
src/interfaces/rest_api/: mod.rs
src/interfaces/rest_api/endpoints/: health.rs  mod.rs  monitoring.rs  orchestration.rs  quantum_states.rs
src/interfaces/websocket/: mod.rs
src/mathematics/: mod.rs
src/mathematics/information_theory/: mod.rs
src/mathematics/optimization/: mod.rs
src/mathematics/quantum_mechanics/: mod.rs
src/metacognition/: mod.rs
src/monkey_tail_integration/: competency_assessment.rs  ephemeral_identity.rs  mod.rs
src/naming_systems/: mod.rs
src/neural/: mod.rs
src/neural/imhotep_neurons/: enhanced_quantum_neuron.rs  mod.rs  quantum_neuron.rs
src/neural/processing_stages/: mod.rs  stage_0_query.rs  stage_1_semantic.rs  stage_2_domain.rs  stage_3_logical.rs  stage_4_creative.rs  stage_5_evaluation.rs  stage_6_integration.rs  stage_7_validation.rs
src/neural/thought_currents/: mod.rs
src/quantum/: mod.rs
src/quantum/maxwell_demon/: mod.rs  molecular_machinery.rs
src/quantum/membrane/: mod.rs  tunneling.rs
src/quantum/oscillations/: mod.rs
src/reality_formation/: mod.rs
src/truth_approximation/: mod.rs
src/vpos/: mod.rs
