[package]
name = "benguela"
version = "0.1.0"
edition = "2021"
authors = ["Benguela Team <benguela@quantum-bio.org>"]
description = "Biological Quantum Computing Architecture - Autonomous orchestrator for Imhotep neuron networks"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/benguela/benguela"
repository = "https://github.com/benguela/benguela"
keywords = ["quantum", "biology", "neuroscience", "computing", "orchestration"]
categories = ["science", "algorithms", "hardware-support"]

[workspace]
members = [
    "benguela-core",
    "benguela-quantum",
    "benguela-bio",
    "benguela-orchestrator",
    "benguela-hardware",
    "benguela-protocols",
    "benguela-deploy"
]

[dependencies]
# Core async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
crossbeam = "0.8"

# Quantum computing foundations
ndarray = "0.15"
num-complex = "0.4"
nalgebra = "0.32"
approx = "0.5"

# Scientific computing
numpy = "0.20"
scipy = "0.11"
plotters = "0.3"

# Hardware interfaces
serialport = "4.2"
hidapi = "2.4"
libusb1-sys = "0.6"

# Networking and protocols
tonic = "0.10"
prost = "0.12"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Data processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
csv = "1.3"
polars = { version = "0.35", features = ["lazy"] }

# Configuration and logging
config = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Performance monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.23", features = ["tokio-comp"] }

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"

# Safety and validation
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
mockall = "0.11"
tempfile = "3.8"

[[bin]]
name = "benguela"
path = "src/main.rs"

[[bin]]
name = "benguela-cli"
path = "src/cli.rs"

[[bin]]
name = "benguela-daemon"
path = "src/daemon.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[features]
default = ["hardware", "quantum", "bio"]
hardware = ["serialport", "hidapi"]
quantum = ["ndarray", "num-complex", "nalgebra"]
bio = ["numpy", "scipy"]
simulation = []
production = ["metrics-exporter-prometheus"] 