[package]
name = "kambuzuma"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai@fullscreen-triangle.com>"]
description = "Biological Quantum Computing Architecture for Autonomous Computational Orchestration"
license = "MIT"
repository = "https://github.com/fullscreen-triangle/kambuzuma"
keywords = ["quantum-computing", "biological-computing", "autonomous-systems", "neural-processing"]
categories = ["science", "algorithms", "concurrency"]

[workspace]
members = [
    "benguela-core",
    "benguela-quantum",
    "benguela-bio",
    "benguela-orchestrator",
    "benguela-hardware",
    "benguela-protocols",
    "benguela-deploy"
]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Numerical computing
nalgebra = "0.32"
ndarray = "0.15"
num-complex = "0.4"
rayon = "1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time and duration
chrono = { version = "0.4", features = ["serde"] }

# Collections and utilities
indexmap = "2.0"
dashmap = "5.4"
uuid = { version = "1.0", features = ["v4"] }

# Biological computing specific
bio = "1.4"
statrs = "0.16"

# Quantum computing utilities
quantum = "0.2"
qiskit = { version = "0.1", optional = true }

# Neural network components
candle-core = "0.3"
candle-nn = "0.3"

# Configuration
config = "0.13"
clap = { version = "4.0", features = ["derive"] }

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.21"

# HTTP and API
axum = "0.6"
tower = "0.4"
tower-http = "0.4"

# Database (for storing quantum states and results)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"

[features]
default = ["quantum-simulation", "neural-processing"]
quantum-simulation = []
neural-processing = []
biological-validation = []
qiskit-backend = ["qiskit"]

[[bin]]
name = "kambuzuma"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1 